--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <nav>
                 <ul>
                     <li><a href="file:///C:/Users/dell/Desktop/project_Edubridge/index.html" >Home</a></li>
-                    <li><a href="" >Products</a></li>
+                    <li><a href="https://pooja14299.github.io/demopage/" >Products</a></li>
                     <li><a href="" >About</a></li>
                     <li><a href="file:///C:/Users/dell/Desktop/project_Edubridge/contact.html" >Contact</a></li>
-                    <li><a href="" >Account</a></li>
+                    <li><a href="https://www.amazon.in/gp/bestsellers/jewelry" >Account</a></li>
                 </ul>
             </nav>
             <img src="images/cart.jpg" width="30px" height="30px">
